--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -33,7 +33,7 @@
               <h2>This is me</h2><span>Philip Gilbert</span>
               <div>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</div><a class="primary-btn" href="#">discover now</a>
             </div>
-            <div class="col-6"><img class="img-fluid" src="hero-img.png" alt="decorative image"></div>
+            <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
           </div>
         </div>
       </section>
@@ -140,6 +140,7 @@
         </div>
       </div>
     </section>
+    </main>
     <footer class="footer">
       <div class="container">
         <div class="row">
