--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -88,7 +88,7 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <div class="section">
         <div class="container">
           <div class="row">
             <div class="col-lg-3">
@@ -101,7 +101,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <section class="section">
         <div class="container">
           <div class="row">
